Add: check subject id list
