# src/rbac/rest/handler_role.go
@@ -28,30 +28,6 @@ func (h *Handler) GetRolesPage(c *gin.Context) {
 	c.JSON(http.StatusOK, roles)
 }
 
-// @Summary Role에 속하는 Subject들의 id 목록 조회
-// @Tags RBAC role
-// @Accept json
-// @Produce json
-// @Param id path int  true  "Role ID"
-// @Param page query int false  "Page Number"
-// @Param pageSize query int false  "Page Size"
-// @Success 200 {object} dblayer.SubjectsOfRolePage
-// @Router /rbac/role/{id}/subject [get]
-func (h *Handler) GetSubjectsOfRolePage(c *gin.Context) {
-	p := c.Param("id")
-	roleID, err := strconv.Atoi(p)
-	if ce.GinError(c, err) {
-		return
-	}
-
-	page, pageSize, hostUrl := paginate.ParsePageUrl(c)
-	roles, err := h.db.GetSubjectsOfRolePage(roleID, page, pageSize, hostUrl)
-	if ce.GinError(c, err) {
-		return
-	}
-	c.JSON(http.StatusOK, roles)
-}
-
 // @Summary Permission의 유효성 검증
 // @Tags RBAC role
 // @Accept json
@@ -70,6 +46,26 @@ func (h *Handler) CheckPermissionIsAllowed(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, permissionStatusOfRole)
+}
+
+// @Summary Subject의 유효성 검증
+// @Tags RBAC role
+// @Accept json
+// @Produce json
+// @Param data body dblayer.SubjectsOfRole true "Data"
+// @Success 200 {object} dblayer.SubjectStatusOfRole
+// @Router /rbac/role/subject [post]
+func (h *Handler) CheckSubjectIsAllowed(c *gin.Context) {
+
+	var subjectsOfRole dblayer.SubjectsOfRole
+
+	err := c.ShouldBindJSON(&subjectsOfRole)
+
+	subjectStatusOfRole, err := h.db.CheckSubjectIsAllowed(subjectsOfRole)
+	if ce.GinError(c, err) {
+		return
+	}
+	c.JSON(http.StatusOK, subjectStatusOfRole)
 }
 
 // @Summary Role 생성
